# carto

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  README.md  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  feature-request.md  feature-request.yml
.github/workflows/: deploy.yml  formatting.yml
docs/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
docs/scripts/: generate_schema.py  icon_test.py
docs/src/components/: GithubStats.astro
docs/src/content/docs/: index.mdx  overview.mdx
docs/src/content/docs/configuration/: configuration.mdx  themeing.mdx
docs/src/content/docs/contributing/: how-to-contribute.mdx  optimisation.mdx  project-structure.mdx
docs/src/content/docs/features/: image-previews.mdx  plugins.mdx  previewing-files.mdx  search.mdx
docs/src/content/docs/get-started/: installation.mdx  tutorial.mdx
docs/src/content/docs/guides/: file-operations.mdx  user-interface.mdx
docs/src/content/docs/reference/: keybindings.mdx  schema.mdx
docs/src/styles/: custom.css
src/: ActionButtons.py  Actions.py  FileList.py  ScreensCore.py  WidgetsCore.py  config.toml  main.py  maps.py  path_autocomplete.py  state.py  style.tcss  template_style.tcss  themes.py
src/carto/: ActionButtons.py  Actions.py  ScreensCore.py  WidgetsCore.py  __init__.py  __main__.py  app.py  main.py  maps.py  state.py  style.tcss  themes.py
src/carto/config/: config.toml  pins.json
src/config/: config.toml  pins.json  template_style.tcss
src/rovr/: ActionButtons.py  Actions.py  FooterWidgets.py  HeaderArea.py  NavigationWidgets.py  ScreensCore.py  SearchContainer.py  WidgetsCore.py  __init__.py  __main__.py  app.py  maps.py  options.py  search_container.py  state.py  style.tcss  themes.py  utils.py  validators.py
src/rovr/action_buttons/: __init__.py  copy_button.py  cut_button.py  delete_button.py  new_item_button.py  paste_button.py  rename_item_button.py  unzip_button.py  zip_button.py
src/rovr/classes/: session_manager.py  textual_options.py
src/rovr/config/: config.toml  pins.json  schema.json
src/rovr/core/: file_list.py  pinned_sidebar.py  preview_container.py
src/rovr/extras/: classes.py
src/rovr/footer/: clipboard_container.py  metadata_container.py  process_container.py
src/rovr/functions/: config.py  path.py  themes.py  utils.py
src/rovr/header/: header.py  tabs.py
src/rovr/navigation_widgets/: __init__.py  buttons.py  path_input.py
src/rovr/screens/: __init__.py  _tester.py  common_file_name_do_what.py  delete_files.py  dismissable.py  input.py  keybinds.py  shortcuts.py  way_too_small.py  yes_or_no.py  zd_to_directory.py
src/rovr/tests/: test_init.py  utils.py
src/rovr/variables/: constants.py  maps.py
