[project]
name = "carto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.12.3",
    "lzstring>=1.0.4",
    "pillow>=11.2.1",
    "platformdirs>=4.3.8",
    "psutil>=7.0.0",
    "send2trash>=1.8.3",
    "textual-autocomplete>=4.0.4",
    "textual-dev>=1.7.0",
    "textual-image[textual]>=0.8.2",
    "textual[syntax]>=3.3.0",
    "thefuzz>=0.22.1",
    "toml>=0.10.2",
    "ujson>=5.10.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "isort>=6.0.1",
    "ruff>=0.11.12",
]
[tool.ruff.lint]
select = ["ASYNC251", "COM819", "F541", "W191", "W291", "W293", "W391", "W605", "F632", "SIM201", "SIM202", "E4", "E7", "E9", "F", "Q"]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
